--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@sdeverywhere/check-core": "^0.1.2",
     "@sdeverywhere/cli": "^0.7.23",
     "@sdeverywhere/plugin-check": "^0.3.5",
-    "@sdeverywhere/plugin-config": "^0.2.4",
     "@sdeverywhere/plugin-vite": "^0.1.8",
     "@sdeverywhere/plugin-wasm": "^0.2.3",
     "@sdeverywhere/plugin-worker": "^0.2.3"
+  },
+  "devDependencies": {
+    "@sdeverywhere/plugin-config": "^0.2.7"
   }
 }
